# lambda-pip

./: .dockerignore  .env  .gitignore  .readthedocs.yml  LICENCE  README.md  cdk.json  default.conf  docker-compose.yml  logging.conf  requirements-dev.txt  requirements-prod.txt  requirements-test.txt  setup.cfg  setup.py
docs/source/: conf.py  examples.rst  footer.rst  index.rst  requirements.txt
docs/source/_templates/: docstring.mustache
src/: Dockerfile  lambda_pip.sh  startup.sh
src/api/: main.py
src/aws/: __init__.py
src/aws/cdk/: stack.py
src/aws/lambda/: my_lambda.py
src/lambda_pip/: __init__.py  config.py  main.py
src/main_package/: __init__.py  config.py  main.py
src/support_package/: helper.py
tests/: conftest.py  dummy_test.py
