###############################################################################
# #         			Package Setup Configuration							# #
###############################################################################
# # Package Information:
[metadata]
name = lambda-pip
version = attr: lambda_pip.__version__
description = {{description}}
long_description = file: README.md
long_description_content_type="text/markdown",
url=https://www.lyngon.com
keywords = Python
license_files = LICENSE
author = Anders Åström
author_email = anders@lyngon.com
classifiers = # https://pypi.org/classifiers/
		Development Status :: 3 - Alpha
		Framework :: AWS CDK :: 2
		Intended Audience :: Developers
		License :: OSI Approved :: MIT License
		Natural Language :: English
        Operating System :: POSIX :: Linux
		Programming Language :: Python :: 3 :: Only
        Programming Language :: Python :: 3.7
		Programming Language :: Python :: 3.8
		Programming Language :: Python :: 3.9
        Topic :: Software Development :: Build Tools
# platform =
# provides =
# requires =
# obsoletes = 

# # Package Settings:
[options]
python_requires = >= 3.7
packages = find:
package_dir =
    =src

# # Project runtime dependency packages:
install_requires = 
	# # Containerization specific dependencies:
	# ConfigArgParse - (Optional) Argument parsing, with env. var. support.
	ConfigArgParse   				

# # Additional 'extras' packages, if any:
[options.extras_require]
# Packages for local development
dev = 
	# Library stubs for datutil.
	types-python-dateutil
	
# # Scripts to install when installing the package:
[options.entry_points]
console_scripts =
	# Install a CLI command `api-export-excel-from-db`, that will execute the 
	# `run_local` function in the `main` module.
	lambda-pip = lambda_pip.main:entrypoint

# # Location of the package(s) in the directory structure:
[options.packages.find]
where = src
# exclude =

###############################################################################
# #         				Test Tooling Config								# #
###############################################################################

# # PyTest
[tool:pytest]
junit_suite_name = pytest_report.xml
testpaths = 
	tests
# addopts = 
#	-n auto
#	-vv


###############################################################################
# #							Dev Tooling Config								# #
###############################################################################
# # Purely Preference based.  
# # VS Code (and other IDEs) can be configured to apply these.

# # Black 
[tool.black]
# The only flexibility Black gives is the line-length :)
line-length = 88

# # Flake8
[flake8]
exclude = 
	.pytest,
	.tox,
	.venv,
	.vscode,
	.git/,
	__pycache__,
	docs/,
per-file-ignores = 
	*/__init__.py: F401,
max-complexity = 10
max-line-length = 88
# Needed for compatibility with Black
extend-ignore = E203, W503 

# # ISort
[isort]
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
ensure_newline_before_comments = True
line_length = 88

[tool.isort]
profile = "black"

# # MyPy
[mypy]
files = 
	src/,
	tests/,
	examples/,
	*.py,
allow_redefinition = False
ignore_errors = False
ignore_missing_imports = True
implicit_reexport = True
local_partial_types = True
strict_optional = True
strict_equality = True
warn_no_return = True
warn_unused_ignores = True
warn_redundant_casts = True
warn_unused_configs = True
warn_unreachable = True

